--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<main class="flex-fill">
+<main class="flex-fill"
+style="background-color: #f0f0f0;">
   <router-outlet></router-outlet>
 </main>
 
