--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -30,6 +30,9 @@
                   Password is required.
               </div>
           </div>
+          <div *ngIf="error$ | async as error" class="alert alert-danger mt-3">
+            {{ error }}
+          </div>
           <button 
               type="submit" 
               class="btn btn-danger btn-block w-100"
