--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -12,7 +12,7 @@
         >
           ☰
         </button>
-        <a class="navbar-brand ms-2" routerLink="/" style="margin-left: 10px;">
+        <a class="navbar-brand ms-2" routerLink="/" style="margin-left: 10px;" (click)="reloadPage()">
           <img
             src="logo.png"
             alt="Extensive Digital"
