--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
 
-<!-- Thinner Navigation Bar Container -->
 <div class="nav-bar mt-5" *ngIf="currentComponent !== 'home'">
   <div class="d-flex justify-content-between align-items-center border-bottom pb-2 position-relative">
-    <!-- Centered Navigation Buttons -->
-    <div class="btn-group mx-auto pe-1" role="group">
+    <!-- Navigation Buttons, using margin-left to move to the right -->
+    <div class="btn-group" role="group" style="margin-left: 500px;">
       <button 
         type="button" 
         class="nav-btn" 
@@ -32,14 +31,18 @@
     <button 
       type="button" 
       class="btn btn-link text-secondary d-flex align-items-center" 
-      (click)="copyLink()">
+      (click)="copyLink()"
+      style="margin-right: 50px;">
       <i class="bi bi-clipboard me-1"></i> Copiați linkul pentru partajare
     </button>
   </div>
 </div>
 
+
 <!-- Conditional Components -->
-<app-data-base *ngIf="currentComponent === 'dataBase'"></app-data-base>
+<app-data-base *ngIf="currentComponent === 'dataBase'"
+[siteLink]="seoForm.get('url')?.value" 
+  [siteName]="extractSiteName(seoForm.get('url')?.value)">></app-data-base>
 <app-important-issues *ngIf="currentComponent === 'importantIssues'"></app-important-issues>
 <app-keyword-overview *ngIf="currentComponent === 'keywordIssues'"></app-keyword-overview>
 
