--- a/src/app/home/data-base/data-base.component.css
+++ b/src/app/home/data-base/data-base.component.css
@@ -235,3 +235,144 @@
   font-weight: bold;
 }
 
+/* src/app/components/performance-metrics/performance-metrics.component.css */
+.metric {
+  margin: 10px 0;
+}
+
+.good {
+  color: green;
+}
+
+.warning {
+  color: orange;
+}
+
+.bad {
+  color: red;
+}
+.my-text {
+  margin-left: -415px;
+  color: rgb(80, 79, 79);
+  margin-top: 10px;
+  font-weight: bold; 
+  font-size: 18px;
+}
+.roww {
+margin-left: -70px;  /* Ajustează valoarea pentru a muta structura mai la stânga */
+}
+.metric-title {
+font-size: 2.2rem; /* Font mare, albastru */
+color: #007bff;
+font-weight: bold;
+}
+
+.metric-subtitle {
+font-size: 0.9rem;
+color: #6c757d;
+margin-top: -10px; /* Reducere spațiu */
+}
+
+.metric-bar-container {
+position: relative;
+height: 10px; /* Lățime ajustată a barei */
+width: 100%;
+display: flex;
+background-color: #e0e0e0;
+border-radius: 5px;
+overflow: hidden;
+}
+
+.metric-bar.green {
+background-color: #00c851;
+}
+
+.metric-bar.yellow {
+background-color: #ffbb33;
+}
+
+.metric-bar.red {
+background-color: #ff4444;
+}
+
+.metric-indicator {
+position: absolute;
+top: 0;
+width: 3px; /* Lățime indicator */
+height: 100%;
+background-color: black;
+}
+
+.metric-value {
+font-weight: bold;
+font-size: 1.25rem;
+color: black;
+margin-top: 5px;
+}
+
+.info-section {
+display: flex;
+align-items: center;
+border-left: 4px solid #007bff;
+padding-left: 15px;
+background-color: #f8f9fa;
+padding: 15px;
+}
+
+.info-title {
+color: #212529;
+font-weight: bold;
+font-size: 1.15rem;
+margin: 0;
+}
+
+.info-text {
+color: #6c757d;
+font-size: 0.95rem;
+margin-left: 15px;
+}
+/* Thinner full-width white background for the navigation bar */
+.nav-bar {
+  background-color: white; /* White background for the navigation bar */
+  border-bottom: 1px solid #e0e0e0; /* Light border at the bottom */
+  width: 100%; /* Full width */
+  padding: 3px 10; /* Thinner padding for a slimmer bar */
+  position: relative; /* Ensures the container stays in place */
+}
+
+/* Style for the navigation buttons */
+.nav-btn {
+  background: transparent;
+  border: none;
+  color: #6c757d;
+  font-size: 16px;
+  padding: 10px 15px;
+}
+
+.nav-btn:hover {
+  color: #0056b3; /* Hover color */
+  text-decoration: none;
+}
+
+/* Active tab styling */
+.active-tab {
+  color: #0056b3; /* Active text color */
+  position: relative;
+  font-weight: bold;
+}
+
+/* Underline effect for the active tab */
+.active-tab::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #007bff; /* Blue underline color */
+  border-radius: 2px;
+}
+
+
+
+
