--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,52 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
 
-<div class="nav-bar mt-5" *ngIf="currentComponent !== 'home'">
-  <div class="d-flex justify-content-between align-items-center border-bottom pb-2 position-relative">
-    <!-- Navigation Buttons, using margin-left to move to the right -->
-    <div class="btn-group" role="group" style="margin-left: 500px;">
-      <button 
-        type="button" 
-        class="nav-btn" 
-        [ngClass]="{'active-tab': currentComponent === 'dataBase'}"
-        (click)="showComponent('dataBase')">
-        Datele de bază
-      </button>
-      <button 
-        type="button" 
-        class="nav-btn" 
-        [ngClass]="{'active-tab': currentComponent === 'importantIssues'}"
-        (click)="showComponent('importantIssues')">
-        Problemele importante
-      </button>
-      <button 
-        type="button" 
-        class="nav-btn" 
-        [ngClass]="{'active-tab': currentComponent === 'keywordIssues'}"
-        (click)="showComponent('keywordIssues')">
-        Keywords Overview
-      </button>
-    </div>
-
-    <!-- Right-aligned Copy Link Button -->
-    <button 
-      type="button" 
-      class="btn btn-link text-secondary d-flex align-items-center" 
-      (click)="copyLink()"
-      style="margin-right: 50px;">
-      <i class="bi bi-clipboard me-1"></i> Copiați linkul pentru partajare
-    </button>
-  </div>
-</div>
-
-
-<!-- Conditional Components -->
-<app-data-base *ngIf="currentComponent === 'dataBase'"
-[siteLink]="seoForm.get('url')?.value" 
-  [siteName]="extractSiteName(seoForm.get('url')?.value)">></app-data-base>
-<app-important-issues *ngIf="currentComponent === 'importantIssues'"></app-important-issues>
-<app-keyword-overview *ngIf="currentComponent === 'keywordIssues'"></app-keyword-overview>
-
-<div *ngIf="currentComponent === 'home'">
+<div>
   <div class="container d-flex flex-column align-items-center justify-content-center min-vh-100">
     <div class="text-center">
       <h2 class="fw-bold">Analizează o pagină web</h2>
@@ -73,6 +27,7 @@
     </form>
   </div>
 </div>
+
 
 
 
